--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header></header>
     <main></main>
-    
+
+    <script src="https://kit.fontawesome.com/47c43d19e3.js" crossorigin="anonymous"></script>
     <script src="assets/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
