--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <h1>Pesquisa CEP</h1>
+    </header>
     <main></main>
 
     <script src="https://kit.fontawesome.com/47c43d19e3.js" crossorigin="anonymous"></script>
