--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>Pesquisa CEP</h1>
+        <i class="fa-solid fa-location-dot"></i>
     </header>
     <main></main>
 
