Adiciona tag form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <h1>Pesquisa CEP</h1>
         <i class="fa-solid fa-location-dot"></i>
     </header>
-    <main></main>
+    <main>
+        <form method="get">
+
+        </form>
+    </main>
 
     <script src="https://kit.fontawesome.com/47c43d19e3.js" crossorigin="anonymous"></script>
     <script src="assets/js/main.js"></script>
