--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     </header>
     <main>
         <form method="get">
-
+            <div>
+                
+            </div>
         </form>
     </main>
 
