Adiciona div para o nome da cidade

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <main>
         <form method="get">
             <div>
-                
+                <div>
+                    
+                </div>
             </div>
         </form>
     </main>
