Adiciona label para Cidade

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <form method="get">
             <div>
                 <div>
-                    
+                   <label for="inlineCheckbox1">Cidade</label>
                 </div>
             </div>
         </form>
