--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div>
                 <div>
                    <label for="inlineCheckbox1">Cidade</label>
+                   <input type="text">
                 </div>
             </div>
         </form>
