Adiciona div para UF

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                    <label for="inlineCheckbox1">Cidade</label>
                    <input type="text">
                 </div>
+
+                <div>
+                    
+                </div>
             </div>
         </form>
     </main>
