Adiciona input para UF

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
                 <div>
                     <label for=""></label>
+                    <input type="text">
                 </div>
             </div>
         </form>
