Adiciona div para logradouro

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                     <label for=""></label>
                     <input type="text">
                 </div>
+
+                <div>
+                    
+                </div>
             </div>
         </form>
     </main>
