--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div>
-                    
+                    <label for=""></label>
                 </div>
             </div>
         </form>
