Adiciona input para logradouro

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
                 <div>
                     <label for=""></label>
+                    <input type="text">
                 </div>
             </div>
         </form>
