Adiciona conteúdo ao label do UF

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <div>
-                    <label for=""></label>
+                    <label for="">UF</label>
                     <input type="text">
                 </div>
 
