--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div>
-                    <label for=""></label>
+                    <label for="">Rua</label>
                     <input type="text">
                 </div>
             </div>
