--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div>
-                
+                <p>O CEP será exibido aqui!</p>
             </div>
         </form>
     </main>
