Adiciona parágrafo que será exibido junto com o CEP

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
             <div>
                 <p>O CEP será exibido aqui!</p>
+                <p>Este é o CEP de Correntes-PE</p>
             </div>
         </form>
     </main>
