--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div>
                 <p>O CEP será exibido aqui!</p>
                 <p>Este é o CEP de Correntes-PE</p>
+                <span>55315-000</span>
             </div>
         </form>
     </main>
