Adiciona classe form-check à div

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <main>
         <form method="get">
             <div>
-                <div>
+                <div class="form-check">
                    <label for="inlineCheckbox1">Cidade</label>
                    <input type="text">
                 </div>
 
-                <div>
+                <div class="form-check">
                     <label for="">UF</label>
                     <input type="text">
                 </div>
 
-                <div>
+                <div class="form-check">
                     <label for="">Rua</label>
                     <input type="text">
                 </div>
