Preenche o campo for dos label

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <form method="get">
             <div>
                 <div class="form-check">
-                   <label class="form-check-label" for="inlineCheckbox1">Cidade</label>
+                   <label class="form-check-label" for="cidade">Cidade</label>
                    <input type="text">
                 </div>
 
                 <div class="form-check">
-                    <label class="form-check-label" for="">UF</label>
+                    <label class="form-check-label" for="uf">UF</label>
                     <input type="text">
                 </div>
 
                 <div class="form-check">
-                    <label class="form-check-label" for="">Rua</label>
+                    <label class="form-check-label" for="rua">Rua</label>
                     <input type="text">
                 </div>
             </div>
