Adiciona class aos input's

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             <div>
                 <div class="form-check">
                    <label class="form-check-label" for="cidade">Cidade</label>
-                   <input type="text">
+                   <input class="form-control" type="text">
                 </div>
 
                 <div class="form-check">
                     <label class="form-check-label" for="uf">UF</label>
-                    <input type="text">
+                    <input class="form-control" type="text">
                 </div>
 
                 <div class="form-check">
                     <label class="form-check-label" for="rua">Rua</label>
-                    <input type="text">
+                    <input class="form-control" type="text">
                 </div>
             </div>
 
