Modifica classe dos label's

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <form method="get">
             <div>
                 <div class="form-check">
-                   <label class="form-check-label" for="cidade">Cidade</label>
+                   <label class="form-label" for="cidade">Cidade</label>
                    <input class="form-control" type="text">
                 </div>
 
                 <div class="form-check">
-                    <label class="form-check-label" for="uf">UF</label>
+                    <label class="form-label" for="uf">UF</label>
                     <input class="form-control" type="text">
                 </div>
 
                 <div class="form-check">
-                    <label class="form-check-label" for="rua">Rua</label>
+                    <label class="form-label" for="rua">Rua</label>
                     <input class="form-control" type="text">
                 </div>
             </div>
