--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <form method="get">
             <div>
-                <div class="form-check">
+                <div>
                    <label class="form-label" for="cidade">Cidade</label>
                    <input class="form-control" type="text">
                 </div>
