Remove classe da div

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                    <input class="form-control" type="text">
                 </div>
 
-                <div class="form-check">
+                <div>
                     <label class="form-label" for="uf">UF</label>
                     <input class="form-control" type="text">
                 </div>
 
-                <div class="form-check">
+                <div>
                     <label class="form-label" for="rua">Rua</label>
                     <input class="form-control" type="text">
                 </div>
