--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 <span>55315-000</span>
             </div>
         </form>
+
+        <img src="assets/img/ilustracao.svg" alt="">
     </main>
 
     <script src="https://kit.fontawesome.com/47c43d19e3.js" crossorigin="anonymous"></script>
