Adiciona tag section para englobar form e a ilustração

--- a/index.html
+++ b/index.html
@@ -16,33 +16,32 @@
         <i class="fa-solid fa-location-dot"></i>
     </header>
     <main>
-        <form method="get">
-            <div>
+        <section>
+            <form method="get">
                 <div>
                     <div>
-                       <label class="form-label" for="cidade">Cidade</label>
-                       <input class="form-control" type="text">
+                        <div>
+                           <label class="form-label" for="cidade">Cidade</label>
+                           <input class="form-control" type="text">
+                        </div>
+                        <div>
+                            <label class="form-label" for="uf">UF</label>
+                            <input class="form-control" type="text">
+                        </div>
                     </div>
                     <div>
-                        <label class="form-label" for="uf">UF</label>
+                        <label class="form-label" for="rua">Rua</label>
                         <input class="form-control" type="text">
                     </div>
                 </div>
-
                 <div>
-                    <label class="form-label" for="rua">Rua</label>
-                    <input class="form-control" type="text">
+                    <p>O CEP será exibido aqui!</p>
+                    <p>Este é o CEP de Correntes-PE</p>
+                    <span>55315-000</span>
                 </div>
-            </div>
-
-            <div>
-                <p>O CEP será exibido aqui!</p>
-                <p>Este é o CEP de Correntes-PE</p>
-                <span>55315-000</span>
-            </div>
-        </form>
-
-        <img src="assets/img/ilustracao.svg" alt="">
+            </form>
+            <img src="assets/img/ilustracao.svg" alt="">
+        </section>
     </main>
 
     <script src="https://kit.fontawesome.com/47c43d19e3.js" crossorigin="anonymous"></script>
