--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="cabecalho">
         <h1>Pesquisa CEP</h1>
         <i class="fa-solid fa-location-dot"></i>
     </header>
