Adiciona classe a tag h1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="cabecalho">
-        <h1>Pesquisa CEP</h1>
+        <h1 class="cabecalho__titulo">Pesquisa CEP</h1>
         <i class="fa-solid fa-location-dot"></i>
     </header>
     <main>
