Adiciona classe para a imagem

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span>55315-000</span>
                 </div>
             </form>
-            <img src="assets/img/ilustracao.svg" alt="">
+            <img src="assets/img/ilustracao.svg" alt="" class="ilustracao">
         </section>
     </main>
 
