Define class para div

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </header>
     <main>
             <form method="get">
-                <div>
-                    <div>
+                <div class="container">
+                    <div class="container__input">
                         <div>
                            <label class="form-label" for="cidade">Cidade</label>
                            <input class="form-control" type="text">
