--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <form method="get">
                 <div class="container">
                     <div class="container__input">
-                        <div>
+                        <div class="input-cidade">
                            <label class="form-label" for="cidade">Cidade</label>
                            <input class="form-control" type="text">
                         </div>
-                        <div>
+                        <div class="input-uf">
                             <label class="form-label" for="uf">UF</label>
                             <input class="form-control" type="text">
                         </div>
