--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <input class="form-control" type="text">
                     </div>
                 </div>
-                <button type="submit" class="form-btn">Pesquisar</button>
+                <button type="submit" class="form-btn my-3">Pesquisar</button>
                 <div class="resultado-pesquisa text-center">
                     <p>Este é o CEP de Correntes-PE</p>
                     <span>55315-000</span>
