Adiciona margin bottom

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
             <form method="get">
                 <div class="container">
-                    <div class="container__input">
+                    <div class="container__input mb-2">
                         <div class="input-cidade">
                            <label class="form-label" for="cidade">Cidade</label>
                            <input class="form-control" type="text">
