--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
             <form method="get">
-                <div class="container">
+                <div class="container p-0">
                     <div class="container__input mb-2">
                         <div class="input-cidade">
                            <label class="form-label" for="cidade">Cidade</label>
