Adiciona padding top ao cabeçalho

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="cabecalho">
+    <header class="cabecalho pt-3">
         <h1 class="cabecalho__titulo">Pesquisa CEP</h1>
         <i class="fa-solid fa-location-dot"></i>
     </header>
