Adiciona margin right ao input de cidade

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form method="get">
                 <div class="container p-0">
                     <div class="container__input mb-2">
-                        <div class="input-cidade">
+                        <div class="input-cidade me-3">
                            <label class="form-label" for="cidade">Cidade</label>
                            <input class="form-control" type="text">
                         </div>
