Define color dos elementos da div resultado

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
-                <div class="resultado-pesquisa text-center">
+                <div class="resultado-pesquisa text-center text-white">
                     <p>Este é o CEP de Correntes-PE</p>
                     <span>55315-000</span>
                 </div>
