Engloba o form e a div resultado dentro de uma section

--- a/index.html
+++ b/index.html
@@ -16,29 +16,31 @@
         <i class="fa-solid fa-location-dot"></i>
     </header>
     <main>
-            <form method="get">
-                <div class="container p-0">
-                    <div class="container__input mb-2">
-                        <div class="input-cidade me-3">
-                           <label class="form-label" for="cidade">Cidade</label>
-                           <input class="form-control" type="text">
+            <section>
+                <form method="get">
+                    <div class="container p-0">
+                        <div class="container__input mb-2">
+                            <div class="input-cidade me-3">
+                               <label class="form-label" for="cidade">Cidade</label>
+                               <input class="form-control" type="text">
+                            </div>
+                            <div class="input-uf">
+                                <label class="form-label" for="uf">UF</label>
+                                <input class="form-control" type="text">
+                            </div>
                         </div>
-                        <div class="input-uf">
-                            <label class="form-label" for="uf">UF</label>
+                        <div>
+                            <label class="form-label" for="rua">Rua</label>
                             <input class="form-control" type="text">
                         </div>
                     </div>
-                    <div>
-                        <label class="form-label" for="rua">Rua</label>
-                        <input class="form-control" type="text">
-                    </div>
-                </div>
-                <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
+                    <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
+                </form>
                 <div class="resultado-pesquisa text-center text-white">
                     <p>Este é o CEP de Correntes-PE</p>
                     <span>55315-000</span>
                 </div>
-            </form>
+            </section>
             <img src="assets/img/ilustracao.svg" alt="" class="ilustracao">
     </main>
 
