Centraliza texto do input

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <label class="form-label" for="cidade">Cidade</label>
                             <input class="form-control" type="text" id="cidade">
                         </div>
-                        <div class="input-uf">
+                        <div class="input-uf text-center">
                             <label class="form-label" for="uf">UF</label>
                             <input class="form-control" type="text" id="uf">
                         </div>
