--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
             </form>
             <div class="resultado-pesquisa text-center text-white">
-                <p>Este é o CEP de Correntes-PE:</p>
+                <p class="mb-0">Este é o CEP de Correntes-PE:</p>
                 <span>55315-000</span>
             </div>
         </section>
