Adiciona classe para número do cep

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </form>
             <div class="resultado-pesquisa text-center text-white">
                 <p class="mb-0">Este é o CEP de <span class="cidade">Correntes-PE</span>:</p>
-                <span>55315-000</span>
+                <span  class="cep">55315-000</span>
             </div>
         </section>
         <img src="assets/img/ilustracao.svg" alt="" class="ilustracao">
