--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                     <div class="container__input mb-2">
                         <div class="input-cidade me-3">
                             <label class="form-label" for="cidade">Cidade</label>
-                            <input class="form-control" type="text" id="cidade">
+                            <input class="form-control" type="text" id="cidade" required>
                         </div>
                         <div class="input-uf text-center">
                             <label class="form-label" for="uf">UF</label>
-                            <input class="form-control" type="text" id="uf">
+                            <input class="form-control" type="text" id="uf" required>
                         </div>
                     </div>
                     <div>
                         <label class="form-label" for="rua">Rua</label>
-                        <input class="form-control" type="text" id="rua">
+                        <input class="form-control" type="text" id="rua" required>
                     </div>
                 </div>
                 <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
