--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="input-uf text-center">
                             <label class="form-label" for="uf">UF</label>
-                            <input class="form-control" type="text" id="uf" required>
+                            <input class="form-control" type="text" id="uf" required maxlength="2">
                         </div>
                     </div>
                     <div>
