--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
             </form>
             <div class="resultado-pesquisa text-center text-white">
-                <p class="mb-0">Este é o CEP de <span class="cidade">Correntes-PE</span>:</p>
+                <p class="mb-0 paragrafo">Este é o CEP de <span class="cidade">Correntes-PE</span>:</p>
                 <span  class="cep">55315-000</span>
             </div>
         </section>
