Cria div para os botões

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                         <input class="form-control" type="text" id="rua" required>
                     </div>
                 </div>
-                <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
+                <div class="container-btn">
+                    <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
+                </div>
             </form>
             <div class="resultado-pesquisa text-center text-white">
                 <p class="mb-0 paragrafo">Este é o CEP de <span class="cidade">Correntes-PE</span>:</p>
