--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 </div>
                 <div class="container-btn">
                     <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
+                    <button type="submit" class="form-btn-limpar my-3 p-2">Limpar</button>
                 </div>
             </form>
             <div class="resultado-pesquisa text-center text-white">
