Modifica classe e adiciona id aos botões

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     </div>
                 </div>
                 <div class="container-btn">
-                    <button type="submit" class="form-btn my-3 p-2">Pesquisar</button>
-                    <button type="submit" class="form-btn-limpar my-3 p-2">Limpar</button>
+                    <button type="submit" class="btn my-3 p-2" id="btn-pesquisar">Pesquisar</button>
+                    <button type="submit" class="btn my-3 p-2" id="btn-limpar">Limpar</button>
                 </div>
             </form>
             <div class="resultado-pesquisa text-center text-white">
