Remove conteúdo da tag span

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </form>
             <div class="resultado-pesquisa text-center text-white">
-                <p class="mb-0 paragrafo">Este é o CEP de <span class="rua">Correntes-PE</span>:</p>
+                <p class="mb-0 paragrafo">Este é o CEP de <span class="rua"></span>:</p>
                 <span  class="cep">55315-000</span>
             </div>
         </section>
