Remove conteúdo da tag span

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </form>
             <div class="resultado-pesquisa text-center text-white">
                 <p class="mb-0 paragrafo">Este é o CEP de <span class="rua"></span>:</p>
-                <span  class="cep">55315-000</span>
+                <span  class="cep"></span>
             </div>
         </section>
         <img src="assets/img/ilustracao.svg" alt="" class="ilustracao">
