Exibe mensagem de erro

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <div>
                         <label class="form-label" for="rua">Rua</label>
                         <input class="form-control" type="text" id="rua" required>
+                        <small class="input-erro">Por favor, informe o nome da rua!</small>
                     </div>
                 </div>
                 <div class="container-btn">
