Exibe mensagem de erro

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                             <label class="form-label" for="uf">UF</label>
                             <input class="form-control" type="text" id="uf" required maxlength="2">
                         </div>
+                        <small class="input-erro">Por favor, informe o nome da cidade!</small>
+                        <small class="input-erro">Por favor, informe o nome do estado!</small>
                     </div>
                     <div>
                         <label class="form-label" for="rua">Rua</label>
