--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                             </div>
                         </div>
                         <div class="mensagem-erro">
-                            <small class="input-erro">Por favor, informe o nome da cidade!</small>
-                            <small class="input-erro">Por favor, informe o nome do estado!</small>
+                            <small class="erro-cidade">Por favor, informe o nome da cidade!</small>
+                            <small class="erro-uf text-center">Por favor, informe o nome do estado!</small>
                         </div>
                     </div>
                     <div>
                         <label class="form-label" for="rua">Rua</label>
                         <input class="form-control" type="text" id="rua" required>
-                        <small class="input-erro">Por favor, informe o nome da rua!</small>
+                        <small class="erro-rua">Por favor, informe o nome da rua!</small>
                     </div>
                 </div>
                 <div class="container-btn">
