Adiciona mensagem de erro para inputs de cidade e uf

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <div class="mensagem-erro">
                             <small class="erro-cidade">Por favor, informe o nome da cidade!</small>
                             <small class="erro-uf text-center">Por favor, informe o nome do estado!</small>
+                            <small class="erro">Por favor, informe o nome da cidade e do estado!</small>
                         </div>
                     </div>
                     <div>
