--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                         <input class="form-control" type="text" id="rua" required>
                     </div>
                 </div>
-                <div class="container-btn">
-                    <button type="submit" class="btn my-3 p-2" id="btn-pesquisar">Pesquisar</button>
-                    <button type="submit" class="btn my-3 p-2" id="btn-limpar">Limpar</button>
+                <div class="container-btn my-3">
+                    <button type="submit" class="btn p-2" id="btn-pesquisar">Pesquisar</button>
+                    <button type="submit" class="btn p-2" id="btn-limpar">Limpar</button>
                 </div>
             </form>
             <div class="resultado-pesquisa text-center text-white">
